--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,12 +1,38 @@
+//.app.dark {
+//  --bg-color: #0f0e17;
+//
+//  --headline-color: #fffffe;
+//  --paragraph-color: #a7a9be;
+//  --button-color: #ff8906;
+//  --button-text-color: #fffffe;
+//
+//  --primary-color: #fffffe;
+//  --secondary-color: #f25f4c;
+//  --tertiary-color: #e53170;
+//}
+
+//.app.dark {
+//  --bg-color: #16161a;
+//
+//  --headline-color: #fffffe;
+//  --paragraph-color: #94a1b2;
+//  --button-color: #7f5af0;
+//  --button-text-color: #fffffe;
+//
+//  --primary-color: #fffffe;
+//  --secondary-color: #72757e;
+//  --tertiary-color: #2cb67d;
+//}
+
 .app.dark {
-  --bg-color: #0f0e17;
+  --bg-color: #004643;
 
   --headline-color: #fffffe;
-  --paragraph-color: #a7a9be;
-  --button-color: #ff8906;
-  --button-text-color: #fffffe;
+  --paragraph-color: #abd1c6;
+  --button-color: #f9bc60;
+  --button-text-color: #001e1d;
 
-  --primary-color: #fffffe;
-  --secondary-color: #f25f4c;
-  --tertiary-color: #e53170;
+  --primary-color: #e8e4e6;
+  --secondary-color: #abd1c6;
+  --tertiary-color: #e16162;
 }
