--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -18,6 +18,15 @@ body {
 
   background: var(--bg-color);
   color: var(--headline-color);
-  min-height: 100vh;
 
+  min-height: 100vh;
+}
+
+.content-page {
+  display: flex;
+}
+
+.page-wrapper {
+  flex-grow: 1;
+  padding: 20px;
 }
