--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -17,4 +17,13 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  gap: 20px;
 }
+
+//.lang button {
+//  background: var(--button-color);
+//  padding: 10px 25px;
+//  color: var(--button-text-color);
+//  border-radius: 5px;
+//  border: 2px solid var(--headline-color);
+//}
