stylelint, fixed files, i18next plugin for eslint

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,12 +1,10 @@
 .app.light {
-  --bg-color: #f9f4ef;
-
-  --headline-color: #020826;
-  --paragraph-color: #716040;
-  --button-color: #8c7851;
-  --button-text-color: #fffffe;
-
-  --primary-color: #fffffe;
-  --secondary-color: #eaddcf;
-  --tertiary-color: #f25042
+    --bg-color: #f9f4ef;
+    --headline-color: #020826;
+    --paragraph-color: #716040;
+    --button-color: #8c7851;
+    --button-text-color: #fffffe;
+    --primary-color: #fffffe;
+    --secondary-color: #eaddcf;
+    --tertiary-color: #f25042;
 }
