--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,17 +1,14 @@
 :root {
-  --font-family-main: Consolas, sans-serif;
+    --font-family-main: consolas, sans-serif;
+    --font-size-m: 1.6rem;
+    --font-line-m: 2.4rem;
+    --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+    --font-size-l: 2.4rem;
+    --font-line-l: 3.2rem;
+    --font-l: var(- font-size-1) / var(--font-line-1) var(--font-family-main);
 
-  --font-size-m: 1.6rem;
-  --font-line-m: 2.4rem;
-  --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
-
-  --font-size-l: 2.4rem;
-  --font-line-l: 3.2rem;
-  --font-l: var(- font-size-1) / var(--font-line-1) var(--font-family-main);
-
-  // Sizes
-  --navbar-height: 50px;
-
-  --sidebar-width: 300px;
-  --sidebar-width-collapsed: 80px;
+    // Sizes
+    --navbar-height: 50px;
+    --sidebar-width: 300px;
+    --sidebar-width-collapsed: 80px;
 }
