--- a/src/shared/ui/Loader/Loader.scss
+++ b/src/shared/ui/Loader/Loader.scss
@@ -32,7 +32,7 @@
     left: 3.5em;
 }
 
-@keyframes bblFadeInOut {
+@keyframes bblFadInOut {
     0%,
     80%,
     100% { box-shadow: 0 2.5em 0 -1.3em; }
