Storybook config, decorators, story components

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -24,7 +24,7 @@
 //  --tertiary-color: #2cb67d;
 // }
 
-.app.dark {
+.dark {
     --bg-color: #004643;
     --headline-color: #fffffe;
     --paragraph-color: #abd1c6;
