--- a/src/shared/ui/Loader/Loader.scss
+++ b/src/shared/ui/Loader/Loader.scss
@@ -1,40 +1,43 @@
-.loader,
-.loader::before,
-.loader::after {
-    border-radius: 50%;
-    width: 2.5em;
-    height: 2.5em;
-    animation: bblFadInOut 1.8s infinite ease-in-out both;
-}
-
-.loader {
-    color: var(--secondary-color);
-    font-size: 7px;
+.lds-facebook {
+    display: inline-block;
     position: relative;
-    text-indent: -9999em;
-    transform: translateZ(0);
-    animation-delay: -0.16s;
+    width: 80px;
+    height: 80px;
 }
 
-.loader::before,
-.loader::after {
-    content: "";
+.lds-facebook div {
+    display: inline-block;
     position: absolute;
-    top: 0;
+    left: 8px;
+    width: 16px;
+    background: var(--secondary-color);
+    animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 
-.loader::before {
-    left: -3.5em;
-    animation-delay: -0.32s;
+.lds-facebook div:nth-child(1) {
+    left: 8px;
+    animation-delay: -0.24s;
 }
 
-.loader::after {
-    left: 3.5em;
+.lds-facebook div:nth-child(2) {
+    left: 32px;
+    animation-delay: -0.12s;
 }
 
-@keyframes bblFadInOut {
-    0%,
-    80%,
-    100% { box-shadow: 0 2.5em 0 -1.3em; }
-    40% { box-shadow: 0 2.5em 0 0; }
+.lds-facebook div:nth-child(3) {
+    left: 56px;
+    animation-delay: 0;
+}
+
+@keyframes lds-facebook {
+    0% {
+        top: 8px;
+        height: 64px;
+    }
+
+    50%,
+    100% {
+        top: 24px;
+        height: 32px;
+    }
 }
