sidebar upgrade, new button themes

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,5 +1,6 @@
 .Button {
     cursor: pointer;
+    padding: 1.5rem 2.5rem;
     color: var(--headline-color);
 }
 
@@ -10,16 +11,51 @@
     outline: none;
 }
 
-.lang {
-    background: var(--button-color);
-    color: var(--button-text-color);
-    padding: 1.5rem 2.5rem;
-    border: 1px solid var(--headline-color);
-}
-
 .outline {
-    padding: 1.5rem 2.5rem;
     border: 1px solid var(--secondary-color);
     color: var(--headline-color);
     background: none;
+}
+
+.background {
+    background: var(--button-color);
+    color: var(--button-text-color);
+    border: none;
+}
+
+.backgroundInverted {
+    background: var(--button-text-color);
+    color: var(--button-color);
+    border: none;
+}
+
+.square {
+    padding: 0;
+}
+
+.square.size_m {
+    width: var(--font-line-m);
+    height: var(--font-line-m);
+}
+
+.square.size_l {
+    width: var(--font-line-l);
+    height: var(--font-line-l);
+}
+
+.square.size_xl {
+    width: var(--font-line-xl);
+    height: var(--font-line-xl);
+}
+
+.size_m {
+    font: var(--font-m);
+}
+
+.size_l {
+    font: var(--font-l);
+}
+
+.size_xl {
+    font: var(--font-xl);
 }
