--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -5,7 +5,10 @@
     --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
     --font-size-l: 2.4rem;
     --font-line-l: 3.2rem;
-    --font-l: var(- font-size-1) / var(--font-line-1) var(--font-family-main);
+    --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+    --font-size-xl: 3.2rem;
+    --font-line-xl: 4rem;
+    --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
 
     // Sizes
     --navbar-height: 50px;
