--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -3,11 +3,7 @@
     width: var(--sidebar-width);
     background: var(--secondary-color);
     position: relative;
-    transition: width 0.3s ease-in-out;
-}
-
-.collapsed {
-    width: var(--sidebar-width-collapsed);
+    transition: width 0.4s ease-in-out;
 }
 
 .switchers {
@@ -15,6 +11,50 @@
     bottom: 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     gap: 20px;
+}
+
+.link {
+    opacity: 1;
+}
+
+.collapseBtn {
+    position: absolute;
+    right: 0;
+    bottom: 50%;
+    float: right;
+    transform: translateX(50%) translateY(50%);
+}
+
+.items {
+    margin-top: 20px;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.item {
+    display: flex;
+    gap: 1rem;
+}
+
+.icon {
+    fill: var(--headline-color);
+}
+
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+
+    .switchers {
+        flex-direction: column;
+    }
+
+    .link {
+        width: 0;
+        opacity: 0;
+        transition: 0.1s opacity;
+    }
 }
