add modal, portal, dark mode change, navbar change

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -10,13 +10,14 @@ html {
 }
 
 body {
-    font-size: 1.6rem;
+    // font-size: 1.6rem;
+
+    font: var(--font-m);
 
     /* reset 10*1.6 = 16px, to make sure you do not get any 10px around */
 }
 
 .app {
-    font: var(--font-m);
     background: var(--bg-color);
     color: var(--headline-color);
     min-height: 100vh;
