--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -11,26 +11,13 @@
 //  --tertiary-color: #e53170;
 // }
 
-// .app.dark {
-//  --bg-color: #16161a;
-
-//  --headline-color: #fffffe;
-//  --paragraph-color: #94a1b2;
-//  --button-color: #7f5af0;
-//  --button-text-color: #fffffe;
-
-//  --primary-color: #fffffe;
-//  --secondary-color: #72757e;
-//  --tertiary-color: #2cb67d;
-// }
-
-.dark {
-    --bg-color: #004643;
+.app.dark {
+    --bg-color: #16161a;
     --headline-color: #fffffe;
-    --paragraph-color: #abd1c6;
-    --button-color: #f9bc60;
-    --button-text-color: #001e1d;
-    --primary-color: #e8e4e6;
-    --secondary-color: #abd1c6;
-    --tertiary-color: #e16162;
+    --paragraph-color: #94a1b2;
+    --button-color: #7f5af0;
+    --button-text-color: #fffffe;
+    --primary-color: #fffffe;
+    --secondary-color: #72757e;
+    --tertiary-color: #2cb67d;
 }
