--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,6 +1,6 @@
 .Navbar {
     width: 100%;
-    height: var(--navbar-height);
+    min-height: var(--navbar-height);
     background: var(--secondary-color);
     display: flex;
     align-items: center;
