--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,9 +1,10 @@
 .Sidebar {
     height: calc(100vh - var(--navbar-height));
     width: var(--sidebar-width);
-    background: var(--secondary-color);
+    background: var(--bg-color);
     position: relative;
     transition: width 0.4s ease-in-out;
+    border-right: 1px solid var(--secondary-color);
 }
 
 .switchers {
