--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -11,7 +11,7 @@
 //  --tertiary-color: #e53170;
 // }
 
-.app.dark {
+.app_dark_theme {
     --bg-color: #16161a;
     --headline-color: #fffffe;
     --paragraph-color: #94a1b2;
