article entity, skeleton

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -7,4 +7,8 @@
     --primary-color: #fffffe;
     --secondary-color: #eaddcf;
     --tertiary-color: #f25042;
+
+    // skeleton
+    --skeleton-color: #eaddcf;
+    --skeleton-shadow: rgba(0 0 0 / 20%);
 }
