--- a/src/app/styles/themes/yellow.scss
+++ b/src/app/styles/themes/yellow.scss
@@ -7,4 +7,8 @@
     --primary-color: #fffffe;
     --secondary-color: #e3f6f5;
     --tertiary-color: #bae8e8;
+
+    // skeleton
+    --skeleton-color: #e3f6f5;
+    --skeleton-shadow: rgba(0 0 0 / 20%);
 }
