--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -29,4 +29,6 @@ body {
 .page-wrapper {
     flex-grow: 1;
     padding: 3rem;
+    height: calc(100vh - var(--navbar-height));
+    overflow-y: auto;
 }
