--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,16 +1,3 @@
-// .app.dark {
-//  --bg-color: #0f0e17;
-
-//  --headline-color: #fffffe;
-//  --paragraph-color: #a7a9be;
-//  --button-color: #ff8906;
-//  --button-text-color: #fffffe;
-
-//  --primary-color: #fffffe;
-//  --secondary-color: #f25f4c;
-//  --tertiary-color: #e53170;
-// }
-
 .app_dark_theme {
     --bg-color: #16161a;
     --headline-color: #fffffe;
@@ -20,4 +7,8 @@
     --primary-color: #fffffe;
     --secondary-color: #72757e;
     --tertiary-color: #2cb67d;
+
+    // skeleton
+    --skeleton-color: #5f626b;
+    --skeleton-shadow: #95b9d1;
 }
