--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -11,4 +11,7 @@
     // skeleton
     --skeleton-color: #eaddcf;
     --skeleton-shadow: rgba(0 0 0 / 20%);
+
+    // card
+    --card-bg: #d5c1b2;
 }
