--- a/src/app/styles/themes/yellow.scss
+++ b/src/app/styles/themes/yellow.scss
@@ -11,4 +11,7 @@
     // skeleton
     --skeleton-color: #e3f6f5;
     --skeleton-shadow: rgba(0 0 0 / 20%);
+
+    // card
+    --card-bg: #c9eee8;
 }
