--- a/src/shared/ui/AppLink/AppLink.module.scss
+++ b/src/shared/ui/AppLink/AppLink.module.scss
@@ -1,6 +1,6 @@
 .AppLink {
     color: var(--headline-color);
-    transition: all 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
 
     &:hover {
         opacity: 0.65;
