--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
@@ -5,3 +5,14 @@
 .commentTitle {
     margin-top: 2rem;
 }
+
+.recommendTitle {
+    margin-top: 2rem;
+}
+
+.recommendations {
+    margin-top: 2rem;
+    flex-wrap: nowrap !important;
+    overflow-y: hidden;
+    overflow-x: auto;
+}
