--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,11 +1,22 @@
 :root {
     --font-family-main: consolas, sans-serif;
+
+    // s
+    --font-size-s: 1.2rem;
+    --font-line-s: 2.0rem;
+    --font-s: var(--font-size-s) / var(--font-line-s) var(--font-family-main);
+
+    // m
     --font-size-m: 1.6rem;
     --font-line-m: 2.4rem;
     --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+
+    // l
     --font-size-l: 2.4rem;
     --font-line-l: 3.2rem;
     --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+
+    // xl
     --font-size-xl: 3.2rem;
     --font-line-xl: 4rem;
     --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
