--- a/src/shared/ui/Dropdown/Dropdown.module.scss
+++ b/src/shared/ui/Dropdown/Dropdown.module.scss
@@ -1,34 +1,39 @@
-.ListBox {
+.Dropdown {
     position: relative;
 }
 
-.trigger {
+.btn {
     background: none;
-    border: none;
     outline: none;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    border: none;
+    cursor: pointer;
 }
 
-.options {
+.menu {
+    display: flex;
+    flex-direction: column;
     background: var(--list-box);
+    box-shadow: 0 4px 8px var(--list-box);
     position: absolute;
     z-index: 10000;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px var(--list-box);
+    border-radius: 8px;
     overflow: hidden;
 }
 
 .item {
-    padding: 10px 20px;
+    padding: 10px 25px;
+    width: 100%;
+    border: none;
+    background: none;
+    outline: none;
+    color: var(--button-text-color);
+    cursor: pointer;
 }
 
 .active {
     background: var(--tertiary-color);
-}
-
-.disabled {
-    opacity: 0.7;
 }
 
 .optionsBottomLeft {
