--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -7,13 +7,8 @@
     padding: 0 20px;
 }
 
-.links {
+.links, .dropdown {
     margin-left: auto;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    gap: 20px;
-    padding: 0 20px;
 }
 
 .appName {
