add popover and notifications

--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -7,10 +7,11 @@
     padding: 0 20px;
 }
 
-.links, .dropdown {
+.links, .dropdown, .actions {
     margin-left: auto;
 }
 
 .appName {
     width: var(--sidebar-width);
 }
+
