--- a/src/shared/ui/Popups/styles/popup.module.scss
+++ b/src/shared/ui/Popups/styles/popup.module.scss
@@ -1,26 +1,14 @@
-.ListBox {
+.popup {
     position: relative;
 }
 
 .trigger {
     background: none;
-    border: none;
     outline: none;
-    padding: 0;
     margin: 0;
-}
-
-.options {
-    background: var(--list-box);
-    position: absolute;
-    z-index: 10000;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px var(--list-box);
-    overflow: hidden;
-}
-
-.item {
-    padding: 10px 20px;
+    padding: 0;
+    border: none;
+    cursor: pointer;
 }
 
 .active {
