--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,18 +1,9 @@
 .Modal {
     position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    inset: 0;
     opacity: 0;
     pointer-events: none;
     color: var(--headline-color);
-}
-
-.overlay {
-    width: 100%;
-    height: 100%;
-    background: var(--overlay-color);
     display: flex;
     justify-content: center;
     align-items: center;
